--- a/taravel/templates/_index.html
+++ b/taravel/templates/_index.html
@@ -1,126 +1,1 @@
-<h1>Bliski Ideału Publikator</h1>
-<h2>strona internetowa będąca narzędziem na rzecz zmiany w MSK</h2>
-<p>(z możliwością rozszerzenia obszaru ze spółek komunalnych na urzędy gmin/miast, organizacje pozarządowe, ośrodki kultury etc. jako nowe zakładki)</p>
-<p>Celem strony jest pokazanie, jakie informacje są w posiadaniu spółek, a mimo to nie publikują one ich na BIP + wskazanie, czemu te informacje są czy mogą być ważne dla mieszkańców i zachęcenie mieszkańców do interesowania się.</p>
-<p>Elementy strony:</p>
-<ul>
-    <li>
-        <p>Wyjaśnienie nazwy (stały tekst) – zgodnie z art. 8 udip na BIPie muszą być udostępnione konkretne informacje, a inne jedynie mogą i jest to katalog otwarty. Również nie sama zawartość BIPu, ale również forma udostępnianych informacji czy ich aktualność jest ważna. Dlatego ciężko stworzyć kryteria, które pokazałyby, jak powinien wyglądać idealny BIP. Dlatego przedstawione propozycje są w zamyśle „jak najbliższe ideału”.</p>
-    </li>
-    <li>
-        <p>Przedstawienie podstaw prawnych, ale językiem zrozumiałym (stały tekst) – art. 8 udip (czym jest BIP, kto musi go prowadzić, jakie informacje i czemu spółek komunalnych też to dotyczy)</p>
-    </li>
-    <li>
-        <p>Ankieta – dana osoba wybiera sobie spółkę, której BIP chce ocenić (fajnie, jeśli da się wgrać bazę spółek komunalnych i będzie można sobie wybrać spółkę) i:</p>
-        <ul>
-            <li>
-                <p>Wpisuje w polu tekstowym pełną nazwę spółki</p>
-            </li>
-            <li>
-                <p>Wpisuje w drugim polu tekstowym link do BIP lub informację, że spółka nie posiada BIP</p>
-            </li>
-            <li>
-                <p>Wymieniona lista dokumentów, które mogłyby się znajdować na BIP spółek (przy każdej nazwie dokumentu znak „i”, po najechaniu na który pojawiła by się informacja, co ten dokument nam powie o spółce i czemu to ważne dla mieszkańców, żeby mieć do niego dostęp). Przy każdej nazwie dokumentu pole do zaznaczenia, jeśli dokument jest w BIPie.</p>
-            </li>
-            <lI><p>Lista dokumentów - propozycje:</p></li>
-            <li>
-                <p>adres email
-                </p>
-            </li>
-            <li>
-                <p>numer telefonu
-                </p>
-            </li>
-            <li>
-                <p>akt założycielski spółki </p>
-            </li>
-            <li>
-                <p>informacja o dokapitalizowywaniu spółki (ile razy gmina obejmowała dodatkowe udziały w spółce) </p>
-            </li>
-            <li>
-                <p>skład organów spółek (zarządu, rady nadzorczej, zgromadzenia wspólników)</p>
-            </li>
-            <li>
-                <p>informacje o doświadczeniu i wykształceniu członków organów </p>
-            </li>
-            <li>
-                <p>informacja o strukturze właścicielskiej (kto posiada udziały w spółce i w jakim procencie)</p>
-            </li>
-            <li>
-                <p>sprawozdania finansowe </p>
-            </li>
-            <li>
-                <p>sprawozdania z działalności (merytoryczne) </p>
-            </li>
-            <li>
-                <p>wyniki kontroli (zewnętrznych i wewnętrznych) </p>
-            </li>
-            <li>
-                <p>procedura, jak dopytać o informacje niezamieszczone w BIP + wzór wniosku o informację publiczną (czy poprawny)</p>
-            </li>
-            <li>
-                <p>rejestr umów podpisywanych przez spółkę </p>
-            </li>
-            <li>
-                <p>regulamin wynagradzania pracowników </p>
-            </li>
-            <li>
-                <p>wysokość wynagrodzenia członków organów </p>
-            </li>
-            <li>
-                <p>informacja o darowiznach przyznawanych przez spółkę</p>
-            </li>
-            <li>
-                <p>informacja o umowach sponsoringowych podpisywanych przez spółkę</p>
-            </li>
-        </ul>
-        <li>
-            <p>dodatkowo potrzebne miejsce na wpisanie, czy dane są aktualne (najlepiej takie rozwiązanie, jak mamtowbipie.pl, gdzie wpisuje się datę danego dokumentu). To powinno dotyczyć tylko niektórych punktów, które da się zweryfikować:</p>
-            <ul>
-                <li>
-                    <p>skład organów spółek (zarządu, rady nadzorczej, zgromadzenia wspólników) – można porównać z KRS</p>
-                </li>
-                <li>
-                    <p>informacja o strukturze właścicielskiej (kto posiada udziały w spółce i w jakim procencie) – można porównać z KRS</p>
-                </li>
-                <li>
-                    <p>sprawozdania finansowe – z którego roku jest ostatnie sprawozdanie </p>
-                </li>
-                <li>
-                    <p>sprawozdania z działalności (merytoryczne) – z którego roku jest ostatnie sprawozdanie </p>
-                </li>
-                <li>
-                    <p>rejestr umów podpisywanych przez spółkę – z kiedy jest ostatnia umowa w rejestrze </p>
-                </li>
-                <li>
-                    <p>informacja o darowiznach przyznawanych przez spółkę – jakiego miesiąca/roku dotyczą wprowadzone dane</p>
-                </li>
-                <li>
-                    <p>informacja o umowach sponsoringowych podpisywanych przez spółkę – jakiego miesiąca/roku dotyczą wprowadzone dane</p>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</ul>
-<p>
-    Nie wiem, czy to za bardzo nie komplikuje, ale akurat w spółkach to dosyć ważne, bo często są nieaktualne dane.</p>
-<ul>
-    <ul>
-        <li>
-            <p>po wypełnieniu ankiety powinien pojawić się wynik w procentach zliczający, ile danych znajduje się na BIPie oraz instrukcja, co zrobić, żeby BIP został założony lub zaktualizowany (np. złożyć wniosek KPA do UG, żeby wójt zobowiązał spółki do aktualizacji BIPu)</p>
-        </li>
-    </ul>
-    <li>
-        <p>Miejsce na link do mamtowbipie.pl, gdzie zajmowali się formatem publikowanych danych.
-        </p>
-    </li>
-    <li>
-        <p>Miejsce na krótki opis MSK</p>
-    </li>
-</ul>
-<p>Wątpliwości:</p>
-<ul>
-    <li>
-        <p>czy robimy podwójne sprawdzenie? To znaczy dopiero, jak dwie osoby sprawdzą jedną spółkę, to dane się pojawią na liście</p>
-    </li>
-</ul>
+<p>Podstawowa strona główna</p>
