--- a/taravel/templates/base.html
+++ b/taravel/templates/base.html
@@ -23,10 +23,6 @@
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
     {% endblock %}
 
-    {% block angular %}
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-    {% endblock %}
-
   </head>
 
   <body>
@@ -81,7 +77,7 @@
       {% endif %}
 
       {% block content %}
-        {% include '_index.html' %}
+        {% include '_default.html' %}
       {% endblock content %}
 
     </div> <!-- /container -->
