--- a/taravel/users/templates/users/user_detail.html
+++ b/taravel/users/templates/users/user_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
+{% block title %}{% trans 'User' %}: {{ object.username }}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -21,8 +21,9 @@
 <div class="row">
 
   <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
+    <a class="btn btn-primary" href="{% url 'users:update' %}">{% trans 'My Info' %}</a>
+    <a class="btn btn-primary" href="{% url 'account_email' %}">{% trans 'E-Mail' %}</a>
+    <a class="btn btn-primary" href="{% url 'addresses:list' username=object.username %}">{% trans 'Addresses' %}</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
