--- a/taravel/users/templates/users/user_detail.html
+++ b/taravel/users/templates/users/user_detail.html
@@ -24,6 +24,7 @@
     <a class="btn btn-primary" href="{% url 'users:update' %}">{% trans 'My Info' %}</a>
     <a class="btn btn-primary" href="{% url 'account_email' %}">{% trans 'E-Mail' %}</a>
     <a class="btn btn-primary" href="{% url 'addresses:list' username=object.username %}">{% trans 'Addresses' %}</a>
+    <a class="btn btn-primary" href="{% url 'orders:list' %}">{% trans 'Orders' %}</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
