--- a/taravel/assets/scss/style.scss
+++ b/taravel/assets/scss/style.scss
@@ -1,3 +1,6 @@
+// @import 'variables';
+// @import 'bootstrap';
+@import 'font-awesome';
 /* These styles are generated from project.scss. */
 
 .alert-debug {
@@ -35,4 +38,20 @@
 */
 [hidden][style="display: block;"] {
   display: block !important;
+}
+.content .container {
+  height: 100%;
+  background-color: #ddd;
+}
+
+html, body, .content{
+  height: 100%;
+}
+
+.sidebar {
+  background-color: #eee;
+  height: 100%;
+}
+.buttons {
+  padding-top: 10px;
 }
