--- a/taravel/orders/templates/orders/order_filter.html
+++ b/taravel/orders/templates/orders/order_filter.html
@@ -23,13 +23,13 @@
                         <td>{{object}}</td>
                         <td>{{object.value}}</td>
                         <td>{{object.created}}</td>
-                        <td>{% include 'orders/_paid_badge.html' with object=object %}</td>
+                        <td>{% include 'payments/_payment_badge.html' with status=object.is_paid %}</td>
                         
                         <td>
                             <a href="{{object.get_absolute_url}}" class="btn btn-primary btn-sm">{% trans 'Details' %}</a>
 
-                            {% if perms.orders.mark_paid_order and not object.is_paid %}
-                            <a href="{% url 'orders:paid' pk=object.pk %}" class="btn btn-info btn-sm">{% trans 'Mark paid' %}</a>
+                            {% if perms.payments.add_payment and not object.is_paid %}
+                            <a href="{% url 'payments:create' order_pk=object.pk %}" class="btn btn-info btn-sm">{% trans 'Add payment' %}</a>
                             {% endif %}
 
                         </td>
