--- a/taravel/trips/templates/trips/trip_filter.html
+++ b/taravel/trips/templates/trips/trip_filter.html
@@ -1,23 +1,18 @@
 {% extends 'trips/trip_base.html' %}
 {% load i18n crispy_forms_tags %}
 {% block content %}
-{% if perms.trips.add_trip %}
-<a href="{% url 'trips:create' %}" class="btn btn-info">{% trans 'Add trip' %}</a>
-{% endif %}
-
-<div class="row">
-  <div class="col-xl-4">{% crispy filter.form %}</div>
+<div class="row" style="height: 100%">
+  <div class="col-xl-4 sidebar">{% crispy filter.form %}</div>
   <div class="col-xl-8">
-    {% for object in object_list %}
-    <div class="card">
-    <img class="card-img-top" src="{{object.main_image.thumbnail.318x200}}">
-      <div class="card-block">
-        <h4 class="card-title">{{object}}</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="{{object.get_absolute_url}}" class="btn btn-primary">{% trans 'Details' %}</a>
-      </div>
+    <div class="buttons">
+      {% if perms.trips.add_trip %}
+      <a href="{% url 'trips:create' %}" class="btn btn-info">{% trans 'Add trip' %}</a>
+      {% endif %}
     </div>
-   {% endfor %}
+
+    {% for object in object_list %}
+    {% include 'trips/_trip_mini.html' with object=object %}
+    {% endfor %}
   </div>
 </div>
 
