--- a/taravel/trips/templates/trips/trip_form.html
+++ b/taravel/trips/templates/trips/trip_form.html
@@ -7,11 +7,14 @@
 $(function() {
         $('#form-images tr').formset({
             prefix: '{{ image.prefix }}',
+            deleteText: '{% trans "remove" %}',
+            addText: '{% trans "add another image" %}',
         });
 });
 </script>
 {% endblock %}
 {% block content %}
+<div class="buttons">
 {% if perms.locations.add_location %}
 <a href="{% url 'locations:create' %}" class="btn btn-info">{% trans 'Add location' %}</a>
 {% endif %}
@@ -19,13 +22,12 @@ $(function() {
 {% if perms.locations.add_country %}
 <a href="{% url 'locations:create_country' %}" class="btn btn-info">{% trans 'Add country' %}</a>
 {% endif %}
-
-
+</div>
 
 <form method="POST" class="form-horizontal" enctype="multipart/form-data">
 {{ form | crispy }}
-<h2>{% trans 'Image' %}</h2>
 {% if images %}
+<h2>{% trans 'Gallery' %}</h2>
 <div id="form-images">
 {% crispy images %}
 </div>
