--- a/taravel/templates/_confirm_delete.html
+++ b/taravel/templates/_confirm_delete.html
@@ -1,9 +1,11 @@
 
 {% load i18n %}
-{% blocktrans with object=object %}Are you sure you want to remove "{{object}}"?{% endblocktrans %}
+<div class="well">
+{% blocktrans with object=object %}<h2>Are you sure you want to remove "<strong>{{object}}</strong>"?</h2>{% endblocktrans %}
 <form method="POST">
 <div style="display:none">
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
 </div>
     <input type="submit" class="btn btn-primary" value="{% trans 'Delete' %}">
 </form>
+</div>
