--- a/taravel/trips/templates/trips/trip_form.html
+++ b/taravel/trips/templates/trips/trip_form.html
@@ -12,6 +12,7 @@ $(function() {
         });
 });
 </script>
+{{form.media}}
 {% endblock %}
 {% block content %}
 <div class="buttons">
@@ -24,7 +25,7 @@ $(function() {
 {% endif %}
 </div>
 
-<form method="POST" class="form-horizontal" enctype="multipart/form-data">
+<form method="POST" enctype="multipart/form-data">
 {{ form | crispy }}
 {% if images %}
 <h2>{% trans 'Gallery' %}</h2>
