--- a/taravel/orders/templates/orders/order_form.html
+++ b/taravel/orders/templates/orders/order_form.html
@@ -14,14 +14,6 @@ $(function() {
 </script>
 {% endblock %}
 {% block content %}
-{% if trip %}
-<ol class="breadcrumb">
-  <li><a href="{{trip.location.country.get_absolute_url}}">{{trip.location.country}}</a></li>
-  <li><a href="{{trip.location.get_absolute_url}}">{{trip.location}}</a></li>
-  <li><a href="{{trip.trip.location.get_absolute_url}}">{{trip}}</a></li>
-  <li class="active">{% trans 'Add order' %}</li>
-</ol>
-{% endif %}
 {% if order %}
 <ol class="breadcrumb">
   <li><a href="{{order.trip.location.country.get_absolute_url}}">{{order.trip.location.country}}</a></li>
@@ -30,7 +22,15 @@ $(function() {
   <li><a href="{{order.get_absolute_url}}">{{order}}</a></li>
   <li class="active">{% trans 'Update order' %}</li>
 </ol>
+{% elif trip %}
+<ol class="breadcrumb">
+  <li><a href="{{trip.location.country.get_absolute_url}}">{{trip.location.country}}</a></li>
+  <li><a href="{{trip.location.get_absolute_url}}">{{trip.location}}</a></li>
+  <li><a href="{{trip.trip.location.get_absolute_url}}">{{trip}}</a></li>
+  <li class="active">{% trans 'Add order' %}</li>
+</ol>
 {% endif %}
+
 <form method="POST" class="form-horizontal">
 {{ form | crispy }}
 <h2>{% trans 'Guest' %}</h2>
