--- a/taravel/templates/account/password_set.html
+++ b/taravel/templates/account/password_set.html
@@ -6,17 +6,15 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-5">
-        <h2>{% trans "Set Password" %}</h2>
+<div class="row">
+  <div class="col-md-5">
+    <h1>{% trans "Set Password" %}</h1>
 
-        <form method="POST" action="./" class="password_set">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <input type="submit" name="action" value="{% trans "Set Password" %}"/>
-        </form>
-    </div>
+    <form method="POST" action="./" class="password_set">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <input type="submit" class="btn btn-primary" name="action" value="{% trans "Set Password" %}"/>
+    </form>
   </div>
 </div>
 {% endblock %}
