--- a/taravel/users/templates/users/user_detail.html
+++ b/taravel/users/templates/users/user_detail.html
@@ -1,38 +1,32 @@
 {% extends "base.html" %}
-{% load static i18n %}
+{% load static %}
+{% load i18n %}
 
-{% block title %}{% trans 'User' %}: {{ object.username }}{% endblock %}
+{% block title %}{% trans "User: " %}{{ object.username }}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="row">
+  <div class="col-sm-12">
 
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
-    </div>
+    <h2>{{ object.username }}</h2>
+    {% if object.name %}
+      <p>{{ object.name }}</p>
+    {% endif %}
   </div>
+</div>
 
 {% if object == request.user %}
 <!-- Action buttons -->
 <div class="row">
 
-  <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">{% trans 'My Info' %}</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">{% trans 'E-Mail' %}</a>
-    <a class="btn btn-primary" href="{% url 'addresses:list' username=object.username %}">{% trans 'Addresses' %}</a>
-    <a class="btn btn-primary" href="{% url 'orders:list' %}">{% trans 'Orders' %}</a>
-    <!-- Your Stuff: Custom user template urls -->
-  </div>
+<div class="col-sm-12 ">
+  <a class="btn btn-primary" href="{% url 'users:update' %}">{% trans "My Info" %}</a>
+  <a class="btn btn-primary" href="{% url 'account_email' %}">{% trans "E-Mail" %}</a>
+  <!-- Your Stuff: Custom user template urls -->
+</div>
 
 </div>
 <!-- End Action buttons -->
 {% endif %}
-
-
-</div>
 {% endblock content %}
 
