--- a/taravel/users/templates/users/user_list.html
+++ b/taravel/users/templates/users/user_list.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load static %}{% load i18n %}
-{% block title %}Members{% endblock %}
+{% block title %}{% trans "Members" %}{% endblock %}
 
 {% block content %}
 
 <div class="container">
 
-    <h2>Users</h2>
+    <h2>{% trans "Users" %}</h2>
 
     <div class="list-group">
         {% for user in user_list %}
