--- a/taravel/templates/_confirm_delete.html
+++ b/taravel/templates/_confirm_delete.html
@@ -1,7 +1,7 @@
 
 {% load i18n %}
 <div class="well">
-{% blocktrans with object=object %}<h2>Are you sure you want to remove "<strong>{{object}}</strong>"?</h2>{% endblocktrans %}
+<h2>{% blocktrans with object=object %}Are you sure you want to remove "<strong>{{object}}</strong>"?{% endblocktrans %}</h2>
 <form method="POST">
 <div style="display:none">
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
