--- a/taravel/users/templates/users/user_detail.html
+++ b/taravel/users/templates/users/user_detail.html
@@ -22,6 +22,7 @@
 <div class="col-sm-12 ">
   <a class="btn btn-primary" href="{% url 'users:update' %}">{% trans "My Info" %}</a>
   <a class="btn btn-primary" href="{% url 'account_email' %}">{% trans "E-Mail" %}</a>
+  <a class="btn btn-primary" href="{% url 'addresses:list' username=object.username %}">{% trans "Addresses" %}</a>
   <!-- Your Stuff: Custom user template urls -->
 </div>
 
