--- a/taravel/templates/_default.html
+++ b/taravel/templates/_default.html
@@ -1,5 +1,31 @@
+{% load leaflet_tags %}
+{% load i18n %}
+<script>
+function main_map_init (map, options) {
+    var geojsonMarkerOptions = {
+        radius: 8,
+        fillColor: "#ff7800",
+        color: "#000",
+        weight: 1,
+        opacity: 1,
+        fillOpacity: 0.8
+    };
+
+    var dataurl = '{% url "locations:data" %}';
+    $.getJSON(dataurl, function (data) {
+        L.geoJson(data, {
+            pointToLayer: function (feature, latlng) {
+                var marker = L.circleMarker(latlng, geojsonMarkerOptions);
+                marker.bindPopup('<a href="' + feature.properties.absolute_url + '">' + feature.properties.name +'</a>');
+                return marker;
+            }
+        }).addTo(map);
+    });
+};
+</script>
 <div class="jumbotron">
 <h1 class="display-3">Biuro Taravel</h1>
     <p class="lead">U nas zawsze spędzisz miło czas za rozsądne pieniądze. Dla nas najważniejszym jest klient i jego zadowolenie. Zawsze dążymy do tego celu w naszej działalności.</p>
     <p><a class="btn btn-lg btn-success" href="{% url 'trips:list' %}" role="button">Zapoznaj się z ofertą</a></p>
 </div>
+{% leaflet_map "main" callback="main_map_init" %}
