--- a/taravel/templates/base.html
+++ b/taravel/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles i18n %}
+{% load leaflet_tags %}
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -15,6 +16,8 @@
       <![endif]-->
 
       {% block css %}
+      {% leaflet_js %}
+      {% leaflet_css %}
       <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" crossorigin="anonymous">
       <link href="{% static 'css/style.css' %}" rel="stylesheet">
       {% endblock %}
@@ -35,10 +38,10 @@
             <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'home' %}">Home</a>
+                  <a class="nav-link" href="{% url 'home' %}">{% trans 'Home' %}</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'about' %}">About</a>
+                  <a class="nav-link" href="{% url 'trips:search' %}">{% trans 'Search on map' %}</a>
                 </li>
               </ul>
 
