--- a/taravel/assets/scss/_variables.scss
+++ b/taravel/assets/scss/_variables.scss
@@ -85,7 +85,7 @@ $border-width:               1px !default;
 //
 // Settings for the `<body>` element.
 
-$body-bg:                    #fff !default;
+$body-bg:                    #21873b !default;
 $body-color:                 $gray-dark !default;
 
 
