--- a/taravel/assets/scss/style.scss
+++ b/taravel/assets/scss/style.scss
@@ -39,23 +39,26 @@
 [hidden][style="display: block;"] {
   display: block !important;
 }
-.content .container {
+.content > .container, .content {
   height: 100%;
   background-color: #ddd;
+  padding-bottom: 25px;
 }
 
-html, body, .content{
-  height: 100%;
+
+.content {
+  background: rgb(33, 135, 59);
 }
 
 .sidebar {
-  background-color: #eee;
+  // background-color: #eee;
   height: 100%;
 }
 .buttons {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
 
 .well {
   padding: 0.75rem 1rem;
