--- a/taravel/templates/base.html
+++ b/taravel/templates/base.html
@@ -43,6 +43,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'trips:search' %}">{% trans 'Search on map' %}</a>
                 </li>
+                {% if request.user.is_staff %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'orders:full_list' %}"></a>
+                </li>
+                {% endif %}
               </ul>
 
               <ul class="nav navbar-nav pull-xs-right">
